--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
 
 <nav id="nav" ></nav>
 
-<main>
+<h1>Tacitas bbl</h1>
 
-    <section></section>
-
-</main>
-
-<footer id="footer" ></footer>
-
-
+<img src="images/menu-close.png">
+<footer id="footer" >
+</footer>
 </body>
 </html>
