--- a/index.html
+++ b/index.html
@@ -8,19 +8,49 @@
     <link rel="stylesheet" href="estilos/header.css">
     <link rel="stylesheet" href="estilos/nav.css">
     <link rel="stylesheet" href="estilos/footer.css">
+    <link rel="stylesheet" href="estilos/banner.css">
+    <link rel="stylesheet" href="estilos/galeria.css">
     <title>dick</title>
 </head>
 <body>
     
 <header id="header"></header>
 
-<nav id="nav" ></nav>
 
-<h1>Tacitas bbl</h1>
+  <div id="banner">
+    <img src="images/ChatGPT Image 28 may 2025, 17_36_56.png" alt="Banner">
+  </div>
+  
+  <section id="galeria">
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2"  tabindex="0"/>
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (2).jpeg" alt="Taza 3" tabindex="0" />
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4"  tabindex="0"/>
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (4).jpeg" alt="Taza 5" tabindex="0" />
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+    <div class="item">
+      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40.jpeg" alt="Taza 6"  tabindex="0"/>
+      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    </div>
+  </section>
+  
 
+<nav id="nav" class="hidden" ></nav>
 
-
-<h2> pagina de tacitas</h2>
 
 <footer id="footer" >
 </footer>
