--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="estilos/footer.css">
     <link rel="stylesheet" href="estilos/banner.css">
     <link rel="stylesheet" href="estilos/galeria.css">
-    <title>dick</title>
+    <title>tazasSUO</title>
 </head>
 <body>
     
