login lleva a la pagina principal

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           <p class="page-link">
             <span class="page-link-label">Haz olvidado tu contraseña?</span>
           </p>
-          <button class="form-btn">Iniciar sesion</button>
+          <a href="index.html" class="form-btn">Iniciar sesión</a>
         </form>
         <p class="sign-up-label">
           No tienes una cuenta?    <span class="sign-up-link">   Crear una cuenta</span>
