--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 <nav id="nav" class="hidden" ></nav>
 
 
-<footer id="footer" >
-</footer>
+<footer id="footer" ></footer>
 <script src="codigo/modulos.js"></script>
 </body>
 </html>
