la primara vez que entra al index te lleva al login

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 <footer id="footer" ></footer>
 
 <script src="codigo/modulos.js"></script>
+<script src="codigo/redirec.js"></script>
 </body>
 </html>
