--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="estilos/footer.css">
     <link rel="stylesheet" href="estilos/banner.css">
     <link rel="stylesheet" href="estilos/galeria.css">
+    <link rel="stylesheet" href="estilos/carrito.css">
+    <link rel="stylesheet" href="estilos/responsive.css">
     <title>tazasSUO</title>
 </head>
 <body>
@@ -18,38 +20,72 @@
   <div id="banner">
     <img src="images/ChatGPT Image 28 may 2025, 17_36_56.png" alt="Banner">
   </div>
-  
-  <section id="galeria">
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2"  tabindex="0"/>
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (2).jpeg" alt="Taza 3" tabindex="0" />
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4"  tabindex="0"/>
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (4).jpeg" alt="Taza 5" tabindex="0" />
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-    <div class="item">
-      <img src="images/WhatsApp Image 2025-05-28 at 16.45.40.jpeg" alt="Taza 6"  tabindex="0"/>
-      <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    </div>
-  </section>
+ 
+<section id="galeria">
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1" tabindex="0"/>
+    <h3>Taza blanca con detalles florales</h3>
+    <p>$120.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza blanca con detalles florales', 120)">Agregar al carrito</button>
+  </div>
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2" tabindex="0"/>
+    <h3>Taza azul con diseño abstracto</h3>
+    <p>$135.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza azul con diseño abstracto', 135)">Agregar al carrito</button>
+  </div>
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (2).jpeg" alt="Taza 3" tabindex="0"/>
+    <h3>Taza personalizada con nombre</h3>
+    <p>$150.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza personalizada con nombre', 150)">Agregar al carrito</button>
+  </div>
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4" tabindex="0"/>
+    <h3>Taza con ilustración de gato</h3>
+    <p>$130.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza con ilustración de gato', 130)">Agregar al carrito</button>
+  </div>
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (4).jpeg" alt="Taza 5" tabindex="0"/>
+    <h3>Taza estilo minimalista negra</h3>
+    <p>$140.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza estilo minimalista negra', 140)">Agregar al carrito</button>
+  </div>
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.40.jpeg" alt="Taza 6" tabindex="0"/>
+    <h3>Taza clásica blanca con asa ancha</h3>
+    <p>$110.00</p>
+    <button class="boton-carrito" onclick="agregarAlCarrito('Taza clásica blanca con asa ancha', 110)">Agregar al carrito</button>
+  </div>
+</section>
 
-<nav id="nav" class="hidden" ></nav>
+
+
+
+ <nav id="nav">
+  <ul>
+    <li onclick="toggleCart()">🛒 Ver Carrito</li>
+
+  </ul>
+ </nav>
+
+
+
+<div id="carrito-panel" class="hidden">
+  <h2>🛍️ Carrito</h2>
+  <ul id="carrito-items"></ul>
+  <p><strong>Total: $<span id="total-carrito">0.00</span></strong></p>
+  <button onclick="vaciarCarrito()">Vaciar Carrito</button>
+</div>
+
+ 
+
 
 <footer id="footer" ></footer>
 
 <script src="codigo/modulos.js"></script>
+<script src="codigo/carrito.js"></script>
+
 </body>
 </html>
