--- a/admin.html
+++ b/admin.html
@@ -19,18 +19,18 @@
 
 <nav id="nav" class="hidden" ></nav>
 
-  <div id="banner">
-    <img src="images/ChatGPT Image 28 may 2025, 17_36_56.png" alt="Banner">
-  </div>
-  
+       <div class="admin-title" ><h1>administracion</h1> </div>   
+
   <section id="galeria">
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
 
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$120.00</p>
-      <button onclick="agregarAlCarrito('Producto 1', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra"> 
+        
+        <button type="button" id="editar" ><img src="images/pencil.png" alt="lapiz"></button>
+        <button type="button" id="aliminar" ><img src="images/basura.png" alt="mugre"></button>
+
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2"  tabindex="0"/>
@@ -78,3 +78,4 @@
 
 </body>
 </html>
+ 
