--- a/singUp.html
+++ b/singUp.html
@@ -13,17 +13,16 @@
 <main>
 
     <div class="form-container">
-        <p class="title">Bienvenido denuevo</p>
+        <p class="title">Bienvenido!</p>
         <form class="form">
           <input type="email" class="input" placeholder="Email">
           <input type="password" class="input" placeholder="Contraseña">
-          <p class="page-link">
-            <span class="page-link-label">Haz olvidado tu contraseña?</span>
+          <p class="page-link"> 
           </p>
-          <a href="index.html" class="form-btn">Iniciar sesión</a>
+          <a href="index.html" class="form-btn">Crear cuenta</a>
         </form>
         <p class="sign-up-label">
-          No tienes una cuenta?    <a href="singUp.html"><span class="sign-up-link">Crear una cuenta</span></a>
+          Ya tienes una cuenta?   <a href="login.html"> <span class="sign-up-link"> Inica sesion </span></a>
         </p>
         <div class="buttons-container">
           <div class="apple-login-button">
