correccion que mando la greta tumberg**

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="galeria">
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
-
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$120.00</p>
       <button onclick="agregarAlCarrito('Producto 1', 10)">Agregar</button>
@@ -34,6 +34,7 @@
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
@@ -41,6 +42,7 @@
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (2).jpeg" alt="Taza 3" tabindex="0" />
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
@@ -48,6 +50,7 @@
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
@@ -55,6 +58,7 @@
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (4).jpeg" alt="Taza 5" tabindex="0" />
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
@@ -62,6 +66,7 @@
     </div>
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40.jpeg" alt="Taza 6"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
