--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +13,7 @@
     <link rel="stylesheet" href="estilos/footer.css">
     <link rel="stylesheet" href="estilos/banner.css">
     <link rel="stylesheet" href="estilos/galeria.css">
-
+    <link rel="stylesheet" href="estilos/admin.css">
     <title>tazasSUO</title>
 </head>
 <body>
@@ -19,54 +22,91 @@
 
 <nav id="nav" class="hidden" ></nav>
 
-       <div class="admin-title" ><h1>administracion</h1> </div>   
+       <div class="admin-title"><h1>administracion</h1> </div>   
 
   <section id="galeria">
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
-
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$120.00</p>
         
-        <button type="button" id="editar" ><img src="images/pencil.png" alt="lapiz"></button>
-        <button type="button" id="aliminar" ><img src="images/basura.png" alt="mugre"></button>
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
+</button>
 
     </div>
+    
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (1).jpeg" alt="Taza 2"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
-      <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra">
+
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
+</button>
     </div>
+
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (2).jpeg" alt="Taza 3" tabindex="0" />
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
-      <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra">
+
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
+
     </div>
+
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
-      <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra">
+
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
     </div>
+
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (4).jpeg" alt="Taza 5" tabindex="0" />
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
-      <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra">
+
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
     </div>
+
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40.jpeg" alt="Taza 6"  tabindex="0"/>
+      <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
       <p>$135.00</p>
-      <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
-      <input type="number" placeholder="cantidad" id="contadorCompra">
+
+<button id="editar">
+  <i class="bx bx-pencil"></i>
+</button>
+<button id="eliminar">
+  <i class="bx bx-trash"></i>
     </div>
+
   </section>
 
 
