--- a/carrito.html
+++ b/carrito.html
@@ -2,7 +2,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Mi Carrito</title>
-  <link rel="stylesheet" href="css/carrito.css">
+      <link rel="stylesheet" href="estilos/average.css">
+    <link rel="stylesheet" href="estilos/header.css">
+    <link rel="stylesheet" href="estilos/nav.css">
+    <link rel="stylesheet" href="estilos/footer.css">
+    <link rel="stylesheet" href="estilos/carrito.css">
 </head>
 <body>
   <nav class="navbar">
@@ -14,7 +18,15 @@
 
   <main>
   <h2>Tu carrito</h2>
-  <div id="carrito-items"></div>
+<div id="carrito-items">
+  <div class="item">
+    <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1" tabindex="0"/>
+    <h2>Vasijita</h2>
+    <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
+    <p>Precio: $120.00</p>
+    <button class="eliminar-item">Eliminar</button>
+  </div>
+</div>
 
   <h3>Total: $<span id="total-final">0.00</span></h3>
 
@@ -28,9 +40,8 @@
     <p>Tu pedido ha sido recibido correctamente.</p>
   </div>
 </main>
+  <script src="js/carrito.js"></script>
 
-
-  <script src="js/java.js"></script>
 
 </body>
 </html>
