correccion que mando la greta tumberg**

--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,13 @@
 
        <div class="admin-title"><h1>administracion</h1> </div>   
 
+       <div >
+        <button id="agregar" class="btn-agregar">
+          <i class='bx bx-plus'></i>
+          Agregar Producto
+        </button>
+       </div>
+
   <section id="galeria">
     <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
