--- a/login.html
+++ b/login.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/average.css">
     <link rel="stylesheet" href="estilos/login.css".css">
+      <link rel="stylesheet" href="estilos/nav.css">
     <link rel="stylesheet" href="estilos/footer.css">
      
     <title>login</title>
 </head>
 <body>
 <main>
+   
+<header id="header"></header>
 
+<nav id="nav" class="hidden" ></nav>
     <div class="form-container">
         <p class="title">Bienvenido denuevo</p>
         <form class="form">
