navegador en el header

--- a/login.html
+++ b/login.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/average.css">
-    <link rel="stylesheet" href="estilos/login.css".css">
+    <link rel="stylesheet" href="estilos/login.css">
       <link rel="stylesheet" href="estilos/nav.css">
     <link rel="stylesheet" href="estilos/footer.css">
+    <link rel="stylesheet" href="estilos/header.css">
      
     <title>login</title>
 </head>
 <body>
+  <header id="header"></header>
 <main>
-   
-<header id="header"></header>
 
 <nav id="nav" class="hidden" ></nav>
     <div class="form-container">
@@ -57,5 +57,7 @@
 </main>
 
 <footer id="footer" ></footer>
+
+<script src="./codigo/modulos.js"></script>
 </body>
 </html>
