--- a/singUp.html
+++ b/singUp.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/average.css">
-    <link rel="stylesheet" href="estilos/login.css".css">
+    <link rel="stylesheet" href="estilos/login.css">
     <link rel="stylesheet" href="estilos/footer.css">
  
     <title>login</title>
 </head>
 <body>
+<header id="header"></header>
 <main>
 
     <div class="form-container">
@@ -52,5 +53,6 @@
 </main>
 
 <footer id="footer" ></footer>
+<script src="./codigo/modulos.js"></script>
 </body>
 </html>
