--- a/carrito.html
+++ b/carrito.html
@@ -41,7 +41,8 @@
     <p>Tu pedido ha sido recibido correctamente.</p>
   </div>
 </main>
-  <script src="js/carrito.js"></script>
+  <script src="codigo/carrito.js"></script>
+<script src="codigo/prod.js"></script>
 
 
 </body>
