--- a/index.html
+++ b/index.html
@@ -72,13 +72,19 @@
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
       <input type="number" placeholder="cantidad" id="contadorCompra">
     </div>
+
+    <h1>Carrito de Compras</h1>
+  <div id="carrito-container"></div>
+
+  <h2>Productos Disponibles</h2>
+  <div id="productos"></div>
   </section>
 
 
 
 <footer id="footer" ></footer>
-<script src="/codigo/java.js"></script>
-<script src="/codigo/scrpt.js"></script>
+<script src="/codigo/prod.js"></script>
+<script src="/codigo/carrito.js"></script>
 <script src="codigo/modulos.js"></script>
 
 </body>
