cargar productos desde el json funca

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   
   <section id="galeria">
-    <div class="item">
+    <!-- <div class="item">
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1"  tabindex="0"/>
       <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
@@ -52,7 +52,7 @@
       <img src="images/WhatsApp Image 2025-05-28 at 16.45.40 (3).jpeg" alt="Taza 4"  tabindex="0"/>
       <h2>Vasijita</h2>
       <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-      <p>$135.00</p>
+      <p>$135.00</p> -->
       <button onclick="agregarAlCarrito('Producto 2', 10)">Agregar</button>
       <input type="number" placeholder="cantidad" id="contadorCompra">
     </div>
