arreglo del carrito, estilos y js

--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
   <script src="codigo/prod.js"></script>
   <script src="codigo/carrito.js"></script>
   <script src="codigo/modulos.js"></script>
+  <script src="./codigo/favoritoModulos.js"></script>
+  <script src="./codigo/ModuloCarritoYFavorito.js"></script>
 </body>
 </html>
