--- a/carrito.html
+++ b/carrito.html
@@ -1,4 +1,4 @@
-<html lang="es">
+<!-- <html lang="es">
 <head>
   <meta charset="UTF-8">
   <title>Mi Carrito</title>
@@ -43,7 +43,8 @@
 </main>
   <script src="codigo/carrito.js"></script>
 <script src="codigo/prod.js"></script>
+<script src="./codigo/ModuloCarritoYFavorito.js"></script>
 
 
 </body>
-</html>
+</html> -->
