--- a/favoritos.html
+++ b/favoritos.html
@@ -13,7 +13,8 @@
   <div id="favoritos-container"></div>
 
 
-
-  <script src="codigo/favorito.js"></script>
+<script src="./codigo/favoritoModulos.js"></script>
+  <script src="./codigo/favorito.js"></script>
+  <script src="./codigo/ModuloCarritoYFavorito.js"></script>
 </body>
 </html>
