wip:funciones realizadas

--- a/favoritos.html
+++ b/favoritos.html
@@ -3,18 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Favoritos</title>
-  <link rel="stylesheet" href="estilos/average.css">
+
   <link rel="stylesheet" href="estilos/galeria.css">
   <link rel="stylesheet" href="estilos/favoritos.css">
+
+    <title>tazasSUO</title>
 </head>
 <body>
+  <header id="header"></header>
+  <nav id="nav" class="hidden"></nav>
+
   <h1>Favoritos</h1>
-  <a href="index.html">Volver a la tienda</a>
+  <a href="index.html"class="volver-tienda">Volver a la tienda</a>
   <div id="favoritos-container"></div>
+  <footer id="footer"></footer>
 
 
-<script src="./codigo/favoritoModulos.js"></script>
-  <script src="./codigo/favorito.js"></script>
   <script src="./codigo/ModuloCarritoYFavorito.js"></script>
+  <script src="./codigo/favorito.js"></script>
+   
 </body>
 </html>
