--- a/carrito.html
+++ b/carrito.html
@@ -1,50 +1,32 @@
-<!-- <html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Carrito</title>
-      <link rel="stylesheet" href="estilos/average.css">
-    <link rel="stylesheet" href="estilos/header.css">
-    <link rel="stylesheet" href="estilos/nav.css">
-    <link rel="stylesheet" href="estilos/footer.css">
-    <link rel="stylesheet" href="estilos/carrito.css">
-  
+  <title>Carrito</title>
+  <link rel="stylesheet" href="estilos/carrito.css">
+
 </head>
 <body>
-  <nav class="navbar">
-    <h1><a href="index.html">Volver a la tienda</a></h1>
-    <div class="carrito-info">
-      🛒 Productos: <span id="carrito-cuenta">0</span> | Total: $<span id="carrito-total">0.00</span>
-    </div>
-  </nav>
+  <header id="header"></header>
+  <nav id="nav" class="hidden"></nav>
 
   <main>
-  <h2>Tu carrito</h2>
-<div id="carrito-items">
-  <div class="item">
-    <img src="images/WhatsApp Image 2025-05-28 at 16.45.39.jpeg" alt="Taza 1" tabindex="0"/>
-    <h2>Vasijita</h2>
-    <h3>Vasija pequeña, por lo común de loza o de metal y con asa, empleada generalmente para tomar líquidos.</h3>
-    <p>Precio: $120.00</p>
-    <button class="eliminar-item">Eliminar</button>
-  </div>
-</div>
+    <h1>Tu Carrito</h1>
+    <div id="carrito-container"></div>
+    <a href="index.html" class="volver-tienda">Volver a la tienda</a>
+  </main>
 
-  <h3>Total: $<span id="total-final">0.00</span></h3>
+  <footer id="footer"></footer>
 
+  <!-- Scripts -->
+  
+  <script src="js/carritoModulo.js"></script>
+  <script src="js/carrito.js"></script>
 
-    <button id="boton-comprar" type="submit" disabled>Comprar</button>
-  </form>
-
-
-  <div id="mensaje-gracias" style="display:none; text-align:center; margin-top:20px;">
-    <h2>¡Gracias por tu compra!</h2>
-    <p>Tu pedido ha sido recibido correctamente.</p>
-  </div>
-</main>
-  <script src="codigo/carrito.js"></script>
-<script src="codigo/prod.js"></script>
-<script src="./codigo/ModuloCarritoYFavorito.js"></script>
-
-
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      mostrarCarrito();
+    });
+  </script>
 </body>
-</html> -->
+</html>
