estilos en los botones de los producos

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="estilos/nav.css">
   <link rel="stylesheet" href="estilos/footer.css">
   <link rel="stylesheet" href="estilos/banner.css">
-  <link rel="stylesheet" href="estilos/galeria.css">
   <link rel="stylesheet" href="estilos/carrito.css"> <!-- Agrega esta línea -->
+  <link rel="stylesheet" href="estilos/galeria.css">
+
   <title>tazasSUO</title>
 </head>
 <body>
@@ -40,9 +41,8 @@
     </div>
   </div>
   
-  <script src="codigo/prod.js"></script>
-  <script src="codigo/carrito.js"></script>
-  <script src="codigo/modulos.js"></script>
+  <script src="./codigo/carrito.js"></script>
+  <script src="./codigo/modulos.js"></script>
   <script src="./codigo/favoritoModulos.js"></script>
   <script src="./codigo/ModuloCarritoYFavorito.js"></script>
 </body>
