--- a/carrito.html
+++ b/carrito.html
@@ -18,10 +18,10 @@
 
   <footer id="footer"></footer>
 
-  <!-- Scripts -->
+
   
-  <script src="js/carritoModulo.js"></script>
-  <script src="js/carrito.js"></script>
+  <script src="./js/carritoModulo.js"></script>
+  <script src="./js/carrito.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
