--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
   <link rel="stylesheet" href="estilos/nav.css">
   <link rel="stylesheet" href="estilos/footer.css">
   <link rel="stylesheet" href="estilos/banner.css">
-<<<<<<< HEAD
-  <link rel="stylesheet" href="estilos/carrito.css"> <!-- Agrega esta línea -->
-  <link rel="stylesheet" href="estilos/galeria.css">
-=======
   <link rel="stylesheet" href="estilos/galeria.css">
   <link rel="stylesheet" href="estilos/carrito.css">
->>>>>>> 5966aa40de7f622c41ba99b3fc04276741596154
 
   <title>tazasSUO</title>
 </head>
@@ -52,24 +47,16 @@
       <div id="carrito-container"></div>
     </div>
   </div>
-<<<<<<< HEAD
-  
-  <script src="./codigo/carrito.js"></script>
-  <script src="./codigo/modulos.js"></script>
-  <script src="./codigo/favoritoModulos.js"></script>
-  <script src="./codigo/ModuloCarritoYFavorito.js"></script>
-=======
 
   <!-- ==========================
        SCRIPTS ORDENADOS
        ========================== -->
-<script src="js/carritoModulo.js"></script>
-<script src="js/carrito.js"></script>
-<script src="js/favoritos.js"></script>
-<script src="js/obtenerProductosFetch.js"></script>
-<script src="Js/modulo.js"></script>
+<script src="./Js/carritoModulo.js"></script>
+<script src="./Js/carrito.js"></script>
+<script src="./Js/favoritos.js"></script>
+<script src="./Js/obtenerProductosFetch.js"></script>
+<script src="./Js/modulo.js"></script>
 
 
->>>>>>> 5966aa40de7f622c41ba99b3fc04276741596154
 </body>
 </html>
