--- a/favoritos.html
+++ b/favoritos.html
@@ -22,12 +22,12 @@
   <footer id="footer"></footer>
 
 
-  <script src="./js/obtenerProductosFetch.js"></script>
+  <script src="./Js/obtenerProductosFetch.js"></script>
 
-  <script src="./js/carritoModulo.js"></script>
-  <script src="./js/carrito.js"></script>
-  <script src="./js/favoritoModulos.js"></script>
-  <script src="./js/favoritos.js"></script>
+  <script src="./Js/carritoModulo.js"></script>
+  <script src="./Js/carrito.js"></script>
+  <script src="./Js/favoritoModulos.js"></script>
+  <script src="./Js/favoritos.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -40,7 +40,7 @@
         mostrarFavoritos();
       });
 
-      // Opcional: mostrar mini-carrito si lo deseas
+   
       mostrarCarrito();
     });
   </script>
