--- a/carrito.html
+++ b/carrito.html
@@ -20,8 +20,8 @@
 
 
   
-  <script src="./js/carritoModulo.js"></script>
-  <script src="./js/carrito.js"></script>
+  <script src="./Js/carritoModulo.js"></script>
+  <script src="./Js/carrito.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
